Improve some formatting and fixed furnaces dropping wrong type of furnace when broken